--- a/app/views/charges/payment_success.html.erb
+++ b/app/views/charges/payment_success.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row success-payment" style="border-style: inset;">
     <div class="col-sm-6 col-sm-offset-4">
-      <h2>Thanks, you paid <strong>&#8377;<%= current_customer.customer_orders.last.grand_total %></strong>!</h2>
+      <h2>Thanks, you paid <strong>&#8377;<%= @total %></strong>!</h2>
     </div>
   </div>
 </div>
