--- a/app/views/brands/show.js.erb
+++ b/app/views/brands/show.js.erb
@@ -1,3 +1,3 @@
 $('#brand-products').html("<%= j (render partial: 'brand_products') %>");
 
-$('#brand-categories').html("<%= j (render 'brand_categories', :locala => {sub: @sub} ) %>");
+$('#brand-categories').html("<%= j (render 'brand_categories', :locals => {sub: @sub} ) %>");
