--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal">&times;</button>
-      <h4 class="modal-title">Edit Address</h4>
+      <h4 class="modal-title"> Address</h4>
     </div>
     <div class="modal-body">
       <%= form_for @address do |f|%>
