--- a/app/views/checkouts/index.html.erb
+++ b/app/views/checkouts/index.html.erb
@@ -15,73 +15,17 @@
         <div class="col-sm-12 clearfix">
           <div class="bill-to create-address">
             <%= render "address"%> 
-            <div class="col-sm-12 create-address">
+          </div>
+        </div>
+      </div>
+      <% end %>
+       <div class="col-sm-12 create-address">
               <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">Add new Address</button>
             </div>
              <!-- Modal -->
             <div class="modal fade" id="myModal" role="dialog">
-              <div class="modal-dialog">
-                <!-- Modal content-->
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Bill To</h4>
-                  </div>
-                  <div class="modal-body">
-                    <%= form_for @address do |f|%>
-                      <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3 billing-form">
-                          <%= f.text_field "name", placeholder: "Name *", required: "required"%>
-                          <%= f.text_field "address_1",  placeholder: "Address 1 *", required: "required", maxlength: '100'%>
-                          <%= f.text_field "address_2",  placeholder: "Address 2"%>
-                          <%= f.text_field "city", placeholder: "city *", required: "required"%>
-                          <%= f.text_field "zipcode", placeholder: "Zip / Postal Code *", required: "required"%>
-                           <%= f.select :country, CountryStateSelect::countries_collection, {}, id: 'country_id' , required: "required"%>
-                              <% @state = ["Andaman and Nicobar Islands","Andhra Pradesh","Arunachal Pradesh","Assam","Bihar","Chandigarh","Chhattisgarh","Dadra and Nagar Haveli","Daman and Diu","Delhi","Goa","Gujarat","Haryana","Himachal Pradesh","Jammu and Kashmir","Jharkhand","Karnataka","Kerala","Lakshadweep","Madhya Pradesh","Maharashtra","Manipur","Meghalaya","Mizoram","Nagaland","Orissa","Pondicherry","Punjab","Rajasthan","Sikkim","Tamil Nadu","Tripura","Uttaranchal","Uttar Pradesh","West Bengal"] %>
-                          <%= f.select(:state, @state, {include_blank: "-- State / Province / Region --"}, id: "state", required: "required") %>
-                          <%= f.text_field "mobile_number", placeholder: "Mobile Phone", pattern:"[1-9][0-9]{9}" %>
-                          <%= f.hidden_field "customer_id", value: "#{current_customer.id}"%>
-                          <%= f.hidden_field "address_type", value: "billing"%>
-                        </div>
-                        <div class="col-sm-3 col-sm-offset-5 form-one">
-                          <%= f.button "Submit" %>
-                        </div>
-                      </div>
-                    <% end %>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
+             <%= render "addresses/form" %>
             </div>
-          </div>
-        </div>
-      </div>
-      <% else %>
-       <div class="modal-body">
-          <%= form_for @address do |f|%>
-            <div class="row">
-              <div class="col-sm-4 col-sm-offset-4 billing-form">
-                <%= f.text_field "name", placeholder: "Name *", required: "required"%>
-                <%= f.text_field "address_1",  placeholder: "Address 1 *", required: "required", maxlength: '100'%>
-                <%= f.text_field "address_2",  placeholder: "Address 2"%>
-                <%= f.text_field "city", placeholder: "city *", required: "required"%>
-                <%= f.text_field "zipcode", placeholder: "Zip / Postal Code *", required: "required"%>
-                 <%= f.select :country, CountryStateSelect::countries_collection, {}, id: 'country_id', required: "required" %>
-                   <% @state = ["Andaman and Nicobar Islands","Andhra Pradesh","Arunachal Pradesh","Assam","Bihar","Chandigarh","Chhattisgarh","Dadra and Nagar Haveli","Daman and Diu","Delhi","Goa","Gujarat","Haryana","Himachal Pradesh","Jammu and Kashmir","Jharkhand","Karnataka","Kerala","Lakshadweep","Madhya Pradesh","Maharashtra","Manipur","Meghalaya","Mizoram","Nagaland","Orissa","Pondicherry","Punjab","Rajasthan","Sikkim","Tamil Nadu","Tripura","Uttaranchal","Uttar Pradesh","West Bengal"] %>
-                    <%= f.select(:state, @state, {include_blank: "-- State / Province / Region --"}, id: "state", required: "required") %>
-                <%= f.text_field "mobile_number", placeholder: "Mobile Phone", pattern:"[1-9][0-9]{9}"%>
-                <%= f.hidden_field "customer_id", value: "#{current_customer.id}"%>
-                <%= f.hidden_field "address_type", value: "billing"%>
-              </div>
-              <div class="col-sm-3 col-sm-offset-5 form-one">
-                <%= f.button "Submit" %>
-              </div>
-            </div>
-          <% end %>
-       </div>
-      <% end %>
     <div class="row">   
   </div> <!--/#cart_items-->
 </section>  
