made changes in views parts

--- a/app/views/cart_items/_total_area.html.erb
+++ b/app/views/cart_items/_total_area.html.erb
@@ -44,7 +44,7 @@
       <div class="total_area">
         <ul>
           <li>Cart Sub Total <span> <%= @cart_sub_total %></span></li>
-          <li>Eco Tax <span><%= @tax %>  </span></li>
+          <li>Tax <span><%= @tax %>  </span></li>
           <li>Shipping Cost <span><%=  @shipping_cost1 %></span></li>
           <li>Discount <span><%=  @discount %></span></li>
           <li>Total <span>&#8377; <%= @total %></span></li>
