--- a/app/views/checkouts/_total_area.html.erb
+++ b/app/views/checkouts/_total_area.html.erb
@@ -9,7 +9,7 @@
       <td> <%= @discount %></td>
     </tr>
     <tr>
-      <td>Exo Tax</td>
+      <td>Tax</td>
       <td><%= @tax %></td>
     </tr>
     <tr>
