--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -18,9 +18,8 @@
             <%= f.select :country, CountryStateSelect::countries_collection, {}, id: 'country_id', required: "required" %>
              <% @state = ["Andaman and Nicobar Islands","Andhra Pradesh","Arunachal Pradesh","Assam","Bihar","Chandigarh","Chhattisgarh","Dadra and Nagar Haveli","Daman and Diu","Delhi","Goa","Gujarat","Haryana","Himachal Pradesh","Jammu and Kashmir","Jharkhand","Karnataka","Kerala","Lakshadweep","Madhya Pradesh","Maharashtra","Manipur","Meghalaya","Mizoram","Nagaland","Orissa","Pondicherry","Punjab","Rajasthan","Sikkim","Tamil Nadu","Tripura","Uttaranchal","Uttar Pradesh","West Bengal"] %>
         <%= f.select(:state, @state, {include_blank: "-- State / Province / Region --"}, id: "state", required: "required") %>
-            <%= f.text_field "mobile_number", placeholder: "Mobile Phone",  pattern:"[1-9][0-9]{9}"%>
+            <%= f.text_field "mobile_number", placeholder: "Mobile Phone",  pattern:"[7-9][0-9]{9}", title: "Phone number start with 7-9 and remaing 9 digit with 0-9"%>
             <%= f.hidden_field "customer_id", value: "#{current_customer.id}"%>
-            <%= f.hidden_field "address_type", value: "billing"%>
           </div>
       
           <div class="col-sm-3 col-sm-offset-4 form-one">
