--- a/app/views/customer_orders/payment.html.erb
+++ b/app/views/customer_orders/payment.html.erb
@@ -1,25 +1,30 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-2 col-sm-offset-5">
-      <%= form_tag charges_path do %>
-        <article>
-          <% if flash[:error].present? %>
-            <div id="error_explanation">
-              <p><%= flash[:error] %></p>
-            </div>
-          <% end %>
+<% if @customer_order.status == "pending" && @customer_order.customer_id == current_customer.id  %>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-2 col-sm-offset-5">
+        <%= form_tag charges_path do %>
+          <article>
+            <% if flash[:error].present? %>
+              <div id="error_explanation">
+                <p><%= flash[:error] %></p>
+              </div>
+            <% end %>
 
-          <label class="amount">
-            <span>Amount: &#8377;<%= @customer_order.grand_total %> </span>
-          </label>
-        </article>
+            <label class="amount">
+              <span>Amount: &#8377;<%= @customer_order.grand_total %> </span>
+            </label>
+          </article>
 
-        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="A month's subscription"
-          data-locale="auto">
-        </script>
-      <% end %>
+          <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+            data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+            data-description="A month's subscription"
+            data-locale="auto">
+          </script>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
+<% else %>
+ <%= render "home/error_404" %>
+<% end %>
