--- a/app/views/home/_error_404.html.erb
+++ b/app/views/home/_error_404.html.erb
@@ -3,7 +3,7 @@
     <a href="index.html"><%=image_tag "home/logo.png" %></a>
   </div>
   <div class="content-404">
-    <%=image_tag "404/404.png", class: "img-responsive" %>
+    <%=image_tag "404/404.png", class: "img-responsive", size: "600x600" %>
     <h1><b>OPPS!</b> We Couldn’t Find this Page</h1>
     <p>Uh... So it looks like you brock something. The page you are looking for has up and Vanished.</p>
     <h2><%=link_to(root_path) do %>Bring me back Home<% end %></h2>
