made chanes in sale order report view

--- a/app/views/reports/sale_order.html.erb
+++ b/app/views/reports/sale_order.html.erb
@@ -1,5 +1,4 @@
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<%= javascript_include_tag "highcharts.js" %>
 
 <div class="container mainmenu">
   <ul class="nav navbar-nav collapse navbar-collapse">
