--- a/app/views/reports/sale_order.html.erb
+++ b/app/views/reports/sale_order.html.erb
@@ -1,4 +1,5 @@
-<%= javascript_include_tag "highcharts.js" %>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
 
 <div class="container mainmenu">
   <ul class="nav navbar-nav collapse navbar-collapse">
