--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -92,7 +92,7 @@
                     </div>
                   </div>
                   <div class="col-sm-2 list-my_order message-reply">
-                    <p align="right"><%=link_to(edit_contact_path(contact), class: "btn btn-default", remote: true) do %>Reply<% end %></p>
+                    <p align="right"><%=link_to(edit_contact_path(contact), class: "btn btn-default", "data-toggle" =>"modal", "data-target" =>"#reply-message", remote: true) do %>Reply<% end %></p>
                   </div>
                 </div>
               </div>
@@ -160,4 +160,4 @@
     </div><!--/#contact-page-->
 <% end %> 
 <div class="modal fade" id="reply-message" role="dialog">
-  </div>
+</div>
