--- a/app/views/contacts/edit.js.erb
+++ b/app/views/contacts/edit.js.erb
@@ -1,3 +1,3 @@
-$("#reply-message").html('<%= j render "reply_message" %>')
+$("#reply-message").html('<%= j render "reply_message" %>');
 
-$("#reply-message").modal('show')
+$("#reply-message").modal('show');
